k8s/policies/03-require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources
  annotations:
    policies.kyverno.io/title: Require resource requests/limits (Mandate #5)
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: require-requests-limits
      match:
        any:
          - resources:
              kinds: ["Pod"]
      exclude:
        any:
          - resources:
              namespaces: ["kube-system", "kyverno", "argocd"]
      validate:
        message: "Mọi container phải khai requests+limits cho cpu & memory."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    memory: "?*"
                    cpu: "?*"
                  limits:
                    memory: "?*"
                    cpu: "?*"
